# selfai

./: .gitignore  Makefile  container.bat  docker-compose.yml  dsdsd  errors.txt
.github/workflows/: bytewax.yml  cdc.yml  crawler.yml  datagen.yml  inference.yml  launch.yml  mq.yml
data-crawling/: Dockerfile.crawler  config.py  dispatcher.py  errors.py  main.py  pyproject.toml  utils.py
data-crawling/crawlers/: __init__.py  base.py  github.py  linkedin.py  medium.py
data-crawling/db/: base.py  documents.py  mongo.py
data-ingestion/: Dockerfile.cdc  Dockerfile.mq  cdc.py  config.py  db.py  mq.py  pyproject.toml  test_cdc.py
feature-processing/: Dockerfile.bytewax  Dockerfile.datagen  config.py  db.py  main.py  mq.py  pyproject.toml  requirements.txt
feature-processing/data_flow/: stream_input.py  stream_output.py
feature-processing/data_logic/: chunking_data_handler.py  cleaning_data_handler.py  dispatcher.py  embedding_data_handler.py
feature-processing/data_model/: base.py  chunk_model.py  clean_model.py  embedding_model.py  raw.py
feature-processing/dataset_generator/: data_formatter.py  dataset_generator.py  llm_communicator.py
feature-processing/script/: bytewax.sh
feature-processing/utils/: __init__.py  chunking.py  cleaning.py  embeddings.py  logging.py
finetuning/: build_config.yaml  config.py  dataset_client.py  model.py  pyproject.toml  requirements.txt  test_local.py  training_config.yaml
inference/: Dockerfile.inference  config.py  db.py  inference_pipeline.py  main.py  pyproject.toml
inference/evaluation/: model_eval.py  rag_eval.py
inference/llm_utils/: chain.py  prompt_templates.py
inference/monitoring/: monitor.py
inference/rag_technics/: query_expansion.py  reranking.py  retriever.py  self_query.py
ops/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
ops/hosting_component/: api_gateway.py  farget.py  function.py
ops/security/: sg.py  vpc.py
ops/services/: base.py  bytewax.py  cdc.py  crawler.py  datagen.py  inference_endpoint.py  mq.py
