[tool.poetry]
name = "data-ingestion"
version = "0.1.0"
description = ""
authors = ["dewasahu2003 <dewasahu2003@gmail.com>"]
readme = "README.md"
packages = [{include = "data_ingestion"}]

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.6.3"
pydantic-settings = "^2.2.1"
pika = "^1.3.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
